force-app/main/default/objects/Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Meals</fullName>
            </value>
            <value>
                <fullName>Conference Registration</fullName>
            </value>
            <value>
                <fullName>Educational Grants</fullName>
            </value>
            <value>
                <fullName>Educational Materials</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Mileage / Fuel</fullName>
            </value>
            <value>
                <fullName>Parking &amp; Tolls</fullName>
            </value>
            <value>
                <fullName>Product Samples</fullName>
            </value>
            <value>
                <fullName>Promotional Items / Gifts</fullName>
            </value>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Speaker Fees / Honoraria</fullName>
            </value>
            <value>
                <fullName>Sponsorships</fullName>
            </value>
            <value>
                <fullName>Doctor Meeting Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>