force-app/main/default/objects/Expense__c/fields/Receipt_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Invoice__c</fullName>
    <label>Receipt/ Invoice #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>