force-app/main/default/objects/Expense__c/fields/Total_Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Spent__c</fullName>
    <label>Total Amount Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>