force-app/main/default/objects/Expense__c/fields/Vendor_Store__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Store__c</fullName>
    <label>Vendor/ Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>