force-app/main/default/objects/Expense__c/fields/Whatsapp_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp_Message_Id__c</fullName>
    <label>Whatsapp Message Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>