force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expense_Type__c</columns>
    <columns>Receipt_Invoice__c</columns>
    <columns>Total_Amount_Spent__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Vendor_Store__c</columns>
    <columns>Visit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>